proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/cannot_assign_to_True.py
#Test that True cannot be used as a variable name
def foo(x):
	True = x

foo(5)